[project]
name = "llmengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.5",
    "langchain-text-splitters>=1.1.0",
    "nbformat>=5.10.4",
    "openai>=2.9.0",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
]
